# appinapp

./: .gitignore  README.md  index.html  package.json  tailwind.config.js  vite.config.js
src/: App.css  App.jsx  ControlPanel.jsx  main.jsx
src-tauri/: Cargo.toml  check_out.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app.json
src-tauri/src/: lib.rs
src/atoms/: atoms.js
src/components/: AcrylicWindow.jsx  AllWorkspaces.jsx  AlwaysOn.jsx  FolderSelect.jsx  LaunchLogin.jsx  SizePositions.jsx  Uptime.jsx  WindowSettings.jsx
src/components/ui/: button.jsx  checkbox.jsx  dropdown-menu.jsx
src/sections/: Gallery.jsx  Settings.jsx
src/widgets/: ClockWidget.jsx  NewWidget.jsx  Player.jsx  TodoWidget.jsx
src/widgets/Clock.widget/: index.jsx
src/widgets/ClockWidget.widget/: index.jsx
src/widgets/Currency.widget/: index.jsx  log.txt  rates.sh
src/widgets/Hello.widget/: index.jsx
src/widgets/Todo.widget/: index.jsx
src/widgets/Weather.widget/: index.jsx
