[package]
name = "appinapp"
version = "0.1.0"
description = "A native app widgets"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
core-graphics = "0.25.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
image = { version = "0.24", default-features = false, features = ["png"] }
sysinfo = "0.33.1"
objc = "0.2.7"
cocoa = "0.26.1"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2.0.0"



